--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,10 @@ gethostname = "0.2.3"
 bytes = "1.2.1"
 reqwest = "0.11"
 tokio = "1"
+names = "0.14.0"
+iptables = "0.4"
 
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
-
+winreg = "0.10"
