--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ reqwest = "0.11"
 tokio = "1"
 names = "0.14.0"
 iptables = "0.4"
-
+rand = "0.8.5"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
