--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ names = "0.14.0"
 #iptables = "0.4"
 rand = "0.8.5"
 regex = "1.6.0"
+directories = "5.0.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
