--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ names = "0.14.0"
 rand = "0.8.5"
 regex = "1.6.0"
 directories = "5.0.0"
+rustyline = "11.0.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
