--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ names = "0.14.0"
 rand = "0.8.5"
 regex = "1.6.0"
 scan_dir = "0.3.3"
-
+portal-lib="0.4.0"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
 winreg = "0.10"
